--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,28 +18,27 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
     <TextView
 
         android:id="@+id/textCounter"
         android:layout_width="181dp"
         android:layout_height="57dp"
+        android:layout_marginRight="8dp"
         android:text="TextView"
         android:textSize="48sp"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        tools:layout_editor_absoluteX="195dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
     <Button
 
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
         android:layout_marginLeft="8dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintRight_toLeftOf="@+id/textView"
-        android:layout_marginRight="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textCounter" />
 </androidx.constraintlayout.widget.ConstraintLayout>
